done GetAllIrineraries method
